--- a/package.json
+++ b/package.json
@@ -5,16 +5,11 @@
   "description": "Личный проект «Большое путешествие» от HTML Academy",
   "scripts": {
     "eslint": "eslint src/**/*.js",
-    "test": "npm run eslint",
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "test": "npm run eslint"
   },
   "devDependencies": {
     "eslint": "6.1.0",
-    "eslint-config-htmlacademy": "0.5.2",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
+    "eslint-config-htmlacademy": "0.5.2"
   },
   "engines": {
     "node": "10"
